--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -7,9 +7,14 @@ error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
-
 }
 
 http {
+    #Docker DNS
+    resolver 127.0.0.11;
 
+    server {
+        listen 0.0.0.0:80;
+        server_name localhost;
+    }
 }
